# portfolio

./: pyproject.toml
etl-backup-case/: README.md  pyproject.toml
projetosbasicos/: README.md
